--- a/pear.html
+++ b/pear.html
@@ -166,12 +166,11 @@
           <a class="btn-ghost" href="#gallery">แกลเลอรีความทรงจำ</a>
         </div>
       </div>
-      <div class="glass" style="min-height: 320px; display: grid; place-items:center; text-align:center;">
-        <div>
-          <h3 style="margin:0 0 6px;">Milestone Counter</h3>
-          <p style="margin:0 0 12px; color: var(--muted);"><span id="daysTogether">0</span> days together</p>
-          <p style="margin:0; color: var(--muted); font-size:13px;">(เริ่มนับจากวันที่เราเป็นแฟนกัน — เปลี่ยนวันที่ได้ในโค้ด)</p>
-        </div>
+      <div class="glass" style="min-height: 320px; display: grid; place-items:center; text-align:center; overflow:hidden;">
+        <figure style="margin:0; width:100%;">
+          <img src="IMG_9041.JPG" alt="First Trip — Best × Pear" style="width:100%; height:100%; object-fit:cover; border-radius:18px; border:1px solid var(--stroke); box-shadow: var(--glow);"/>
+          <figcaption style="margin-top:10px; color:var(--muted); font-size:13px;">First Trip Snapshot — Best × Pear</figcaption>
+        </figure>
       </div>
     </section>
 
